# snu

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
snu/: CElegans.cpp  CElegans.hpp  Neuron.cpp  Neuron.hpp
snu/brain/: CElegans.cpp  CElegans.hpp  CElegansBrain.cpp  CElegansBrain.hpp  CMakeLists.txt  Neuron.cpp  Neuron.hpp  connectome.hpp
snu/brain/tests/: CElegansBrainTest.cpp  CElegansTest.cpp  CMakeLists.txt  NeuronTest.cpp  memosc.cpp  mempot.cpp  plot.py
snu/connectome/: ConnectomeParser.cpp  ConnectomeParser.hpp
snu/connectome/data/: connectome.csv
snu/connectome/tests/: ConnectomeParserTest.cpp
snu/connectome/tests/data/: connectome.csv
snu/model/: CElegans.cpp  CElegans.hpp  Neuron.cpp  Neuron.hpp
snu/model/tests/: CElegansTest.cpp  memosc.cpp  mempot.cpp
snu/robots/: CMakeLists.txt  SnuPuck.cpp  SnuPuck.hpp
snu/robots/e-puck/: CMakeLists.txt  SnuPuck.cpp  SnuPuck.hpp
snu/robots/e-puck/tests/: CMakeLists.txt  SnuPuckTest.cpp
snu/robots/tests/: CMakeLists.txt  SnuPuckTest.cpp
snu/tests/: CElegansTest.cpp  memosc.cpp  mempot.cpp
snu/worm/: CElegans.cpp  CElegans.hpp  CMakeLists.txt
snu/worm/tests/: CElegansTest.cpp  CMakeLists.txt  teachFoodDirection.cpp
src/brain/: CMakeLists.txt  Column.cpp  Column.h  Neuron.cpp  Neuron.h
src/brain/tests/: CMakeLists.txt  ColumnTest.cpp  NeuronTest.cpp  plots.py
viewer/: CElegansBehavior.cpp  CMakeLists.txt  Playground.cpp  Viewer.cpp  Viewer.moc
viewer/gl/: gettime.h
viewer/resource/: GUILayout.xml
